fix: 修改正常可用，
1、升级了elasticsearch 7.6.1
2、log4j 输出一个错误目录修复
3、新增数据库部署docker 的健康方式